--- a/reservation.html
+++ b/reservation.html
@@ -2,13 +2,13 @@
 <html lang="en"><!-- Basic -->
 <head>
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">   
-   
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+
      <!-- Site Metas -->
-    <title>Live Dinner Restaurant - Responsive HTML5 Template</title>  
+    <title>Live Dinner Restaurant - Responsive HTML5 Template</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -18,13 +18,13 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">    
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- Site CSS -->
-    <link rel="stylesheet" href="css/style.css">    
+    <link rel="stylesheet" href="css/style.css">
 	<!-- Pickadate CSS -->
-    <link rel="stylesheet" href="css/classic.css">    
-	<link rel="stylesheet" href="css/classic.date.css">    
-	<link rel="stylesheet" href="css/classic.time.css">    
+    <link rel="stylesheet" href="css/classic.css">
+	<link rel="stylesheet" href="css/classic.date.css">
+	<link rel="stylesheet" href="css/classic.time.css">
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
@@ -75,7 +75,7 @@
 		</nav>
 	</header>
 	<!-- End header -->
-	
+
 	<!-- Start All Pages -->
 	<div class="all-page-title page-breadcrumb">
 		<div class="container text-center">
@@ -87,7 +87,7 @@
 		</div>
 	</div>
 	<!-- End All Pages -->
-	
+
 	<!-- Start Reservation -->
 	<div class="reservation-box">
 		<div class="container">
@@ -110,13 +110,13 @@
 										<div class="form-group">
 											<input id="input_date" class="datepicker picker__input form-control" name="date" type="text" value="" equired data-error="Please enter Date">
 											<div class="help-block with-errors"></div>
-										</div>                                 
+										</div>
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
 											<input id="input_time" class="time form-control picker__input" required data-error="Please enter time">
 											<div class="help-block with-errors"></div>
-										</div>                                 
+										</div>
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
@@ -131,7 +131,7 @@
 											  <option value="7">7</option>
 											</select>
 											<div class="help-block with-errors"></div>
-										</div> 
+										</div>
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -140,29 +140,29 @@
 										<div class="form-group">
 											<input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required data-error="Please enter your name">
 											<div class="help-block with-errors"></div>
-										</div>                                 
+										</div>
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
 											<input type="text" placeholder="Your Email" id="email" class="form-control" name="email" required data-error="Please enter your email">
 											<div class="help-block with-errors"></div>
-										</div> 
+										</div>
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
 											<input type="text" placeholder="Your Numbar" id="phone" class="form-control" name="phone" required data-error="Please enter your Numbar">
 											<div class="help-block with-errors"></div>
-										</div> 
+										</div>
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="submit-button text-center">
 										<button class="btn btn-common" id="submit" type="submit">Book Table</button>
-										<div id="msgSubmit" class="h3 text-center hidden"></div> 
-										<div class="clearfix"></div> 
+										<div id="msgSubmit" class="h3 text-center hidden"></div>
+										<div class="clearfix"></div>
 									</div>
 								</div>
-							</div>            
+							</div>
 						</form>
 					</div>
 				</div>
@@ -170,7 +170,7 @@
 		</div>
 	</div>
 	<!-- End Reservation -->
-	
+
 	<!-- Start Customer Reviews -->
 	<div class="customer-reviews-box">
 		<div class="container">
@@ -225,7 +225,7 @@
 		</div>
 	</div>
 	<!-- End Customer Reviews -->
-	
+
 	<!-- Start Contact info -->
 	<div class="contact-imfo-box">
 		<div class="container">
@@ -261,7 +261,7 @@
 		</div>
 	</div>
 	<!-- End Contact info -->
-	
+
 	<!-- Start Footer -->
 	<footer class="footer-area bg-f">
 		<div class="container">
@@ -302,21 +302,21 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="copyright">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<p class="company-name">All Rights Reserved. &copy; 2018 <a href="#">Live Dinner Restaurant</a> Design By : 
-					<a href="https://html.design/">html design</a></p>
+						<p class="company-name">All Rights Reserved. &copy; 2018 <a href="#">Live Dinner Restaurant</a> Developed By :
+					<a href="#">Ahmed Mubarak</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
-		
+
 	</footer>
 	<!-- End Footer -->
-	
+
 	<a href="#" id="back-to-top" title="Back to top" style="display: none;"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></a>
 
 	<!-- ALL JS FILES -->
